--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<%layout('layouts/boilerplate')-%>
     <title><%-title%></title>
-</head>
-<body>
-    <h1>Express Appp</h1>
-</body>
-</html>
+    <p>welcome</p>
